# rust-fundamentals-training

./: .gitignore  LICENSE  README.md  index.css  index.html  index.js  index.js.map
.github/workflows/: build-slides.yaml  build-test-hol.yaml
chapter/: 000-intro.md  002-hands-on-labs.md  005-cargo.md  010-common-concepts.md  020-ownership.md  040-traits.md  043-generics.md  045-iterators.md  050-advanced-topics.md  060-rocket.md  070-wasm.md
examples/100-foundations/: Cargo.toml  readme.md  stairway.md  username.txt
examples/100-foundations/backups/: 01_variables_control_flow.rs  03_tuples_main.rs  04_arrays_main.rs  05_vec_main.rs  06_structs_main.rs  09_lifetimes_structs_main.rs  10_enums_iterators_enumerators.rs  11_error_handling.rs  12_iterators.rs  13_into_iterator.rs  14_threading.rs  15_generics_boxing.rs  16_more_traits.rs  17_trait_objects.rs  18_fibonacci.rs  19-reverse.rs  1_variables_control_flow.rs  20-async.rs  2_loops_main.rs  4_arrays_main.rs  6_ownership.rs  8_lifetimes.rs
examples/100-foundations/src/: main.rs
examples/110-wasm/: .gitignore  Cargo.toml  justfile  readme.md
examples/110-wasm/node/: app.ts  package.json  tsconfig.json
examples/110-wasm/src/: lib.rs
examples/110-wasm/www/: index.html  package.json  webpack.config.js
examples/110-wasm/www/src/: index.css  index.html  index.ts
examples/111-turmrechnen/: Cargo.toml  justfile  readme-de.md  readme.md
examples/120-tictactoe/: Cargo.toml  readme.md
examples/200-guess-the-number-game/: Cargo.toml  readme.md
examples/205-take-n-from-m/: Cargo.toml  README.md
examples/210-clock/: Cargo.toml
examples/220-fibonacci-iterator/: Cargo.toml
examples/230-progress-iterator/: Cargo.toml  README.md
examples/240-multi-threading-example/: Cargo.toml
examples/245-async-tokio/: Cargo.toml
examples/246-fun-with-futures/: Cargo.toml
examples/250-trait-objects/: Cargo.toml
examples/255-traits-testing/: Cargo.toml
examples/300-hello-diesel/: .env  .gitignore  mydb.db
examples/300-hello-diesel-OUTDATED/: Cargo.toml  readme.md
examples/400-hello-axum/: Cargo.toml  requests.http
examples/400-hello-axum/src/: main.rs
examples/450-request/: Cargo.toml
examples/500-echo-server-tokio/: Cargo.toml
examples/500-error-handling/: Cargo.toml  config.json
examples/500-error-handling/src/: main.rs
examples/600-echo-server-tokio/: Cargo.toml
examples/710-bus-graph/: Cargo.toml
examples/720-deref/: Cargo.toml
examples/error-handling/: Cargo.toml
hands-on-labs/: readme.md
hands-on-labs/010-getting-started/: readme.md
hands-on-labs/020-square-content/: readme.md
hands-on-labs/030-simple-board-content/: readme.md
hands-on-labs/040-generic-board-content/: readme.md
hands-on-labs/050-cli/: readme.md
hands-on-labs/060-board-index/: readme.md
hands-on-labs/070-fillable-board/: readme.md
hands-on-labs/080-ship-finder/: readme.md
hands-on-labs/090-single-player-game/: readme.md
hands-on-labs/1000-console-ttt/: Cargo.toml
hands-on-labs/1010-math-pyramid/: readme.md
hands-on-labs/1020-tic-tac-toe/: readme.md
hands-on-labs/1021-simple-ttt/: readme.md
hands-on-labs/1030-7-segments/: Cargo.toml  readme.md
hands-on-labs/200-web-api-getting-started/: readme.md
hands-on-labs/210-game-repository/: readme.md
hands-on-labs/220-web-api/: readme.md
hands-on-labs/230-browser-client/: readme.md
hands-on-labs/300-wasm-getting-started/: readme.md
hands-on-labs/310-wasm-browser/: readme.md
hands-on-labs/999-final/battleship_web_api/: Cargo.toml  requests.http
hands-on-labs/999-final/battleship_web_api/public/: index.html  index.js
hands-on-labs/999-final/battleship_web_api/src/: game_repository.rs  main.rs
slides/: .editorconfig  .gitignore  .markdownlint.json  package-lock.json  package.json  readme.md
(+135 files in other folders)
