[package]
name = "foundations"
version = "0.1.0"
authors = [
    "stefan.baumgartner <Stefan.Baumgartner@dynatrace.com>",
    "Rainer Stropek <rainer@software-architects.at>"
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
futures = "0.3"
async-std = "1.10"