[package]
name = "wasm_examples"
version = "0.1.0"
authors = ["Rainer <rainer@software-architects.at>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
js-sys = "0.3"
serde-wasm-bindgen = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
