[package]
name = "battleship_web_api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = [ "uuid", "json" ] }
uuid = { version = "^0.8.0", features = ["serde", "v4"] }
battleship_game_logic = { path = "../battleship_game_logic" }
mockall_double = "^0.2.0"

[dev-dependencies]
serde_json = "^1.0.0"
mockall = "^0.10.0"
